--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gamepad.css",
-  "description": "CSS buttons of gaming consoles",
+  "description": "CSS gamepad buttons of gaming consoles",
   "version": "0.0.2",
   "private": true,
   "author": {
