--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gamepad.css",
   "description": "CSS gamepad buttons of gaming consoles",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "private": true,
   "author": {
     "name": "Diego Villa",
@@ -20,7 +20,7 @@
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "BASE_PATH=/gamepad.css/stories/ storybook build --output-dir docs/stories",
-    "build-css": "sass ./src/assets/gamepad.scss:./dist/styles.css && sass ./src/assets/Gamepad.scss:./dist/styles.min.css --style compressed && cp -r ./src/assets/fonts ./dist/ && cp -r ./public/icons ./dist/"
+    "build-css": "sass ./src/assets/gamepad.scss:./dist/styles.css && sass ./src/assets/gamepad.scss:./dist/styles.min.css --style compressed && cp -r ./src/assets/fonts ./dist/ && cp -r ./public/icons ./dist/"
   },
   "devDependencies": {
     "@storybook/addon-backgrounds": "^7.6.7",
